--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@oada/oada-jobs",
   "version": "0.1.0",
   "description": "A library for oada job based microservices",
-  "main": "index.js",
+  "main": "index.mjs",
   "repository": "https://gitlab.com/oada/oada-jobs",
   "author": "Andrew Balmos <abalmos@purdue.edu>",
   "license": "MIT",
