--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "@oada/oada-jobs",
+  "name": "@oada/jobs",
   "version": "0.1.1",
   "description": "A library for oada job based microservices",
-  "main": "index.mjs",
-  "repository": "https://gitlab.com/oada/oada-jobs",
+  "main": "index.ts",
+  "repository": "https://gitlab.com/oada/jobs",
   "author": "Andrew Balmos <abalmos@purdue.edu>",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node index.ts",
+    "build": "tsc",
+    "watch": "tsc --watch"
+  },
   "dependencies": {
+    "@oada/client": "oada/client#delete",
     "@oada/oada-cache": "^3.1.2",
+    "@oada/types": "oada/types",
+    "@sindresorhus/is": "^2.1.1",
     "bluebird": "^3.7.2",
     "debug": "^4.1.1",
+    "ksuid": "^1.2.0",
     "p-queue": "^6.3.0",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^1.19.1"
+    "prettier": "^2.0.5",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3"
   }
 }
