--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "es6",
     "lib": ["es2019"],
     "declaration": true,
-    "outDir": "./dist",
+    "rootDir": "src",
+    "outDir": "dist",
     "sourceMap": true,
     "strict": true,
     "noUnusedLocals": true,
@@ -13,8 +14,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["lib/**/*"],
-  "exclude": ["node_modules", "test/**/*"]
+    "esModuleInterop": true
+  }
 }
