--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "ksuid": "^1.2.0",
     "moment": "^2.25.3",
     "p-queue": "^6.3.0",
-    "p-timeout": "^3.2.0"
+    "p-timeout": "^3.2.0",
+    "tiny-json-http": "^7.1.2"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
