--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oada/jobs",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -21,6 +21,8 @@
     "@oada/client": "^1.0.2",
     "@oada/types": "^1.0.10",
     "@sindresorhus/is": "^2.1.1",
+    "@types/bluebird": "^3.5.31",
+    "bluebird": "^3.7.2",
     "debug": "^4.1.1",
     "ksuid": "^1.2.0",
     "moment": "^2.25.3",
