--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@oada/jobs",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
+  "bin": {
+    "oada-jobs": "./src/cli.mjs"
+  },
   "types": "dist/index.d.js",
   "files": [
     "dist/"
@@ -23,8 +26,11 @@
     "@sindresorhus/is": "^2.1.1",
     "@types/bluebird": "^3.5.31",
     "bluebird": "^3.7.2",
+    "chalk": "^4.1.0",
+    "color-json": "^2.0.1",
     "debug": "^4.1.1",
     "ksuid": "^1.2.0",
+    "minimist": "^1.2.5",
     "moment": "^2.25.3",
     "p-queue": "^6.3.0",
     "p-timeout": "^3.2.0",
