--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
-node_modules
-dist
-.env
 yarn-error.log
+node_modules
+package.lock
+package-lock.json
+
+*.log
+.DS_Store
+
+# TypeScript
+dist
+*.tsbuildinfo
+
+# Docker overrides
+docker-compose.override.yml
+.env
+
+# Ignore act stuff?
+.actrc
+act/
+
+# yarn 2 stuff
+**/.yarn/*
+!**/.yarn/releases
+!**/.yarn/plugins
+!**/.yarn/versions
+**/.pnp.*
+# ignore sdk stuff
+**/.vim
