--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oada/jobs",
-  "version": "2.0.2",
+  "version": "2.0.4",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -21,29 +21,30 @@
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "@oada/client": "^1.1.3",
-    "@oada/types": "^1.0.10",
+    "@oada/client": "^2.4.1",
+    "@oada/types": "^1.5.1",
     "@sindresorhus/is": "^2.1.1",
-    "@types/bluebird": "^3.5.31",
+    "@types/bluebird": "^3.5.35",
     "bluebird": "^3.7.2",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.1",
     "color-json": "^2.0.1",
-    "debug": "^4.1.1",
-    "ksuid": "^1.2.0",
+    "debug": "^4.3.2",
     "minimist": "^1.2.5",
-    "moment": "^2.25.3",
-    "p-queue": "^6.3.0",
+    "moment": "^2.29.1",
     "p-timeout": "^3.2.0",
-    "tiny-json-http": "^7.1.2"
+    "tiny-json-http": "^7.3.0",
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
+    "@tsconfig/node14": "^1.0.0",
     "@types/debug": "^4.1.5",
-    "@types/node": "^14.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "eslint": "^7.0.0",
-    "prettier": "^2.0.5",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.9.2"
+    "@types/node": "^14.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "@yarnpkg/pnpify": "^3.0.0-rc.3",
+    "eslint": "^7.26.0",
+    "prettier": "^2.3.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
