--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,11 @@
+packageExtensions:
+  mocha@*:
+    peerDependencies:
+      ts-node: "*"
+    peerDependenciesMeta:
+      ts-node:
+        optional: true
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
