--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oada/jobs",
-  "version": "2.0.9",
+  "version": "3.0.0",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -18,13 +18,26 @@
     "start": "ts-node src/index.ts",
     "prepare": "npm run build",
     "build": "tsc",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "test": "mocha",
+    "testdev": "DEBUG=\"*,-mocha*,-@oada/client*\" mocha -w --watch-files=src,test --watch-ignore='node_modules,.git,**/.*.sw*'"
   },
+  "mocha": {
+    "require": [
+      "ts-node/register"
+    ],
+    "extension": "test.ts",
+    "exit": true,
+    "timeout": 10000
+  },
+  "packageManager": "yarn@3.0.1",
   "dependencies": {
-    "@oada/client": "^2.6.1",
+    "@oada/client": "^3.0.5",
+    "@oada/oadaify": "^1.0.1",
     "@oada/types": "^1.5.1",
     "@sindresorhus/is": "^2.1.1",
     "@types/bluebird": "^3.5.35",
+    "@types/tiny-json-http": "^7.3.1",
     "bluebird": "^3.7.2",
     "chalk": "^4.1.1",
     "color-json": "^2.0.1",
@@ -37,14 +50,21 @@
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.0",
+    "@types/chai": "^4",
+    "@types/convict": "^6",
     "@types/debug": "^4.1.5",
-    "@types/node": "^14.17.0",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "@yarnpkg/pnpify": "^3.0.0-rc.3",
+    "chai": "^4.3.4",
+    "convict": "^6.2.1",
+    "dotenv": "^10.0.0",
     "eslint": "^7.26.0",
+    "mocha": "^9.1.3",
     "prettier": "^2.3.0",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.2.4"
   }
 }
