--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@oada/jobs",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
+  "type": "module",
   "bin": {
     "oada-jobs": "./src/cli.mjs"
   },
@@ -17,8 +18,8 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "prepare": "npm run build",
-    "build": "tsc",
-    "watch": "tsc --watch",
+    "build": "tsc -b",
+    "watch": "tsc -b --watch",
     "test": "mocha",
     "testdev": "DEBUG=\"*,-mocha*,-@oada/client*\" mocha -w --watch-files=src,test --watch-ignore='node_modules,.git,**/.*.sw*'"
   },
@@ -32,39 +33,41 @@
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
-    "@oada/client": "^3.0.7",
+    "@oada/client": "^4.0.1",
     "@oada/oadaify": "^1.0.1",
-    "@oada/types": "^1.5.1",
+    "@oada/types": "^2.0.1",
     "@sindresorhus/is": "^2.1.1",
-    "@types/bluebird": "^3.5.35",
     "@types/tiny-json-http": "^7.3.1",
     "bluebird": "^3.7.2",
     "chalk": "^4.1.1",
     "color-json": "^2.0.1",
     "debug": "^4.3.2",
     "minimist": "^1.2.5",
-    "moment": "^2.29.1",
+    "moment": "^2.29.3",
     "p-timeout": "^3.2.0",
     "tiny-json-http": "^7.3.0",
-    "tslib": "^2.2.0"
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.0",
+    "@tsconfig/node16": "^1.0.1",
+    "@types/bluebird": "^3.5.36",
     "@types/chai": "^4",
     "@types/convict": "^6",
     "@types/debug": "^4.1.5",
     "@types/mocha": "^9.0.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "@yarnpkg/pnpify": "^3.0.0-rc.3",
+    "@yarnpkg/sdks": "^3.0.0-rc.5",
     "chai": "^4.3.4",
     "convict": "^6.2.1",
     "dotenv": "^10.0.0",
     "eslint": "^7.26.0",
     "mocha": "^9.1.3",
     "prettier": "^2.3.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.2.4"
+    "ts-node": "^10.7.0",
+    "typescript": "latest"
   }
 }
