--- a/package.json
+++ b/package.json
@@ -20,28 +20,58 @@
     "prepare": "npm run build",
     "build": "tsc -b",
     "watch": "tsc -b --watch",
-    "test": "mocha",
-    "testdev": "DEBUG=\"*,-mocha*,-@oada/client*\" mocha -w --watch-files=src,test --watch-ignore='node_modules,.git,**/.*.sw*'"
+    "test": "yarn build test && c8 ava",
+    "test:debug": "ava -T 60m -svc 1 --no-worker-threads"
   },
-  "mocha": {
-    "require": [
-      "ts-node/register"
+  "ava": {
+    "failFast": false,
+    "files": [
+      "**/report.test.ts"
     ],
-    "extension": "test.ts",
-    "exit": true,
-    "timeout": 10000
+    "typescript": {
+      "extensions": [
+        "ts"
+      ],
+      "rewritePaths": {
+        "src/": "dist/",
+        "test/": ".test/"
+      },
+      "compile": false
+    }
+  },
+  "c8": {
+    "reporter": [
+      "text",
+      "lcov"
+    ],
+    "all": true,
+    "src": "src",
+    "exclude": [
+      "*.d.ts",
+      ".pnp.*",
+      ".test"
+    ]
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
+    "@ava/typescript": "^3.0.1",
     "@oada/client": "^4.0.1",
+    "@oada/list-lib": "^3.0.8",
     "@oada/oadaify": "^1.0.1",
     "@oada/types": "^2.0.1",
     "@sindresorhus/is": "^2.1.1",
     "@types/tiny-json-http": "^7.3.1",
+    "ava": "^4.3.1",
     "bluebird": "^3.7.2",
+    "c8": "^7.12.0",
     "chalk": "^4.1.1",
+    "clone-deep": "^4.0.1",
     "color-json": "^2.0.1",
+    "cron": "^2.1.0",
+    "csvjson": "^5.1.0",
     "debug": "^4.3.2",
+    "json-pointer": "^0.6.2",
+    "ksuid": "^3.0.0",
     "minimist": "^1.2.5",
     "moment": "^2.29.3",
     "p-timeout": "^3.2.0",
@@ -53,9 +83,10 @@
     "@tsconfig/node16": "^1.0.1",
     "@types/bluebird": "^3.5.36",
     "@types/chai": "^4",
+    "@types/clone-deep": "^4",
     "@types/convict": "^6",
+    "@types/cron": "^2",
     "@types/debug": "^4.1.5",
-    "@types/mocha": "^9.0.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
@@ -66,9 +97,11 @@
     "convict": "^6.2.1",
     "dotenv": "^10.0.0",
     "eslint": "^7.26.0",
-    "mocha": "^9.1.3",
     "prettier": "^2.3.0",
     "ts-node": "^10.7.0",
     "typescript": "latest"
+  },
+  "resolutions": {
+    "@oada/list-lib": "portal:/home/sanoel/list-lib"
   }
 }
