--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,14 +1,14 @@
 packageExtensions:
+  chalk@5.0.1:
+    dependencies:
+      "#ansi-styles": "npm:ansi-styles@6.1.0"
+      "#supports-color": "npm:supports-color@9.2.2"
   mocha@*:
     peerDependencies:
       ts-node: "*"
     peerDependenciesMeta:
       ts-node:
         optional: true
-  chalk@5.0.1:
-    dependencies:
-      "#ansi-styles": npm:ansi-styles@6.1.0
-      "#supports-color": npm:supports-color@9.2.2
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
@@ -16,4 +16,4 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
 
-yarnPath: .yarn/releases/yarn-3.2.0.cjs
+yarnPath: .yarn/releases/yarn-3.3.1.cjs
