--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oada/jobs",
-  "version": "4.1.5",
+  "version": "4.1.6",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -52,53 +52,53 @@
       ".test"
     ]
   },
-  "packageManager": "yarn@3.2.0",
+  "packageManager": "yarn@3.3.1",
   "dependencies": {
     "@ava/typescript": "^3.0.1",
-    "@oada/client": "^4.0.1",
-    "@oada/list-lib": "^4.1.3",
-    "@oada/oadaify": "^1.0.1",
-    "@oada/types": "^2.0.1",
-    "@sindresorhus/is": "^2.1.1",
+    "@oada/client": "^4.5.0",
+    "@oada/list-lib": "^4.2.2",
+    "@oada/oadaify": "^2.1.0",
+    "@oada/types": "^3.3.0",
+    "@sindresorhus/is": "^5.3.0",
     "@types/tiny-json-http": "^7.3.1",
-    "ava": "^4.3.1",
+    "ava": "^5.1.1",
     "bluebird": "^3.7.2",
     "c8": "^7.12.0",
-    "chalk": "^4.1.1",
+    "chalk": "^4.1.2",
     "clone-deep": "^4.0.1",
-    "color-json": "^2.0.1",
-    "cron": "^2.1.0",
+    "color-json": "^3.0.0",
+    "cron": "^2.2.0",
     "csvjson": "^5.1.0",
-    "debug": "^4.3.2",
+    "debug": "^4.3.4",
     "json-pointer": "^0.6.2",
     "ksuid": "^3.0.0",
-    "minimist": "^1.2.5",
-    "moment": "^2.29.3",
-    "p-timeout": "^3.2.0",
-    "serialize-error": "^10.0.0",
-    "tiny-json-http": "^7.3.0",
-    "tslib": "^2.4.0"
+    "minimist": "^1.2.7",
+    "moment": "^2.29.4",
+    "p-timeout": "^6.0.0",
+    "serialize-error": "^11.0.0",
+    "tiny-json-http": "^7.4.2",
+    "tslib": "^2.4.1"
   },
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.1",
-    "@types/bluebird": "^3.5.36",
-    "@types/chai": "^4",
-    "@types/clone-deep": "^4",
-    "@types/convict": "^6",
-    "@types/cron": "^2",
-    "@types/debug": "^4.1.5",
+    "@tsconfig/node16": "^1.0.3",
+    "@types/bluebird": "^3.5.38",
+    "@types/chai": "^4.3.4",
+    "@types/clone-deep": "^4.0.1",
+    "@types/convict": "^6.1.1",
+    "@types/cron": "^2.0.0",
+    "@types/debug": "^4.1.7",
     "@types/moment": "^2.13.0",
-    "@types/node": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
-    "@yarnpkg/pnpify": "^3.0.0-rc.3",
-    "@yarnpkg/sdks": "^3.0.0-rc.5",
-    "chai": "^4.3.4",
-    "convict": "^6.2.1",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.26.0",
-    "prettier": "^2.3.0",
-    "ts-node": "^10.7.0",
-    "typescript": "latest"
+    "@types/node": "^16",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "@yarnpkg/pnpify": "^4.0.0-rc.36",
+    "@yarnpkg/sdks": "^3.0.0-rc.36",
+    "chai": "^4.3.7",
+    "convict": "^6.2.4",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.32.0",
+    "prettier": "^2.8.3",
+    "ts-node": "^10.9.1",
+    "typescript": "4.8.3"
   }
 }
