--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "types": "dist/index.d.js",
   "files": [
-    "dist/"
+    "src/**",
+    "dist/**"
   ],
   "repository": "https://github.com/oada/jobs",
   "author": "Andrew Balmos <abalmos@purdue.edu>",
@@ -52,21 +53,20 @@
       ".test"
     ]
   },
-  "packageManager": "yarn@3.3.1",
+  "packageManager": "yarn@3.4.1",
   "dependencies": {
     "@ava/typescript": "^3.0.1",
     "@oada/client": "^4.5.0",
-    "@oada/list-lib": "^4.2.2",
+    "@oada/list-lib": "^4.2.4",
     "@oada/oadaify": "^2.1.0",
     "@oada/types": "^3.3.0",
     "@sindresorhus/is": "^5.3.0",
-    "@types/tiny-json-http": "^7.3.1",
     "ava": "^5.1.1",
     "bluebird": "^3.7.2",
     "c8": "^7.12.0",
     "chalk": "^4.1.2",
     "clone-deep": "^4.0.1",
-    "color-json": "^3.0.0",
+    "color-json": "^3.0.2",
     "cron": "^2.2.0",
     "csvjson": "^5.1.0",
     "debug": "^4.3.4",
@@ -74,12 +74,13 @@
     "ksuid": "^3.0.0",
     "minimist": "^1.2.7",
     "moment": "^2.29.4",
-    "p-timeout": "^6.0.0",
+    "p-timeout": "^6.1.0",
     "serialize-error": "^11.0.0",
     "tiny-json-http": "^7.4.2",
-    "tslib": "^2.4.1"
+    "tslib": "^2.5.0"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.4.2",
     "@tsconfig/node16": "^1.0.3",
     "@types/bluebird": "^3.5.38",
     "@types/chai": "^4.3.4",
@@ -87,18 +88,47 @@
     "@types/convict": "^6.1.1",
     "@types/cron": "^2.0.0",
     "@types/debug": "^4.1.7",
+    "@types/json-pointer": "^1.0.31",
     "@types/moment": "^2.13.0",
-    "@types/node": "^16",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "@yarnpkg/pnpify": "^4.0.0-rc.36",
-    "@yarnpkg/sdks": "^3.0.0-rc.36",
+    "@types/node": "^16.18.11",
+    "@types/tiny-json-http": "^7.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "@yarnpkg/pnpify": "^4.0.0-rc.37",
+    "@yarnpkg/sdks": "^3.0.0-rc.37",
     "chai": "^4.3.7",
+    "commitlint": "^17.4.2",
     "convict": "^6.2.4",
     "dotenv": "^16.0.3",
-    "eslint": "^8.32.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.55.1",
+    "eslint-plugin-array-func": "^3.1.8",
+    "eslint-plugin-ava": "^14.0.0",
+    "eslint-plugin-escompat": "^3.3.4",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-github": "^4.6.0",
+    "eslint-plugin-i18n-text": "^1.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-no-constructor-bind": "^2.0.4",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-no-secrets": "^0.8.9",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-notice": "^0.9.10",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-regexp": "^1.12.0",
+    "eslint-plugin-security": "^1.7.0",
+    "eslint-plugin-sonarjs": "^0.18.0",
+    "eslint-plugin-unicorn": "^45.0.2",
     "prettier": "^2.8.3",
     "ts-node": "^10.9.1",
     "typescript": "4.8.3"
+  },
+  "volta": {
+    "node": "16.19.0"
   }
 }
