--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "composite": true,
     "module": "Node16",
     "moduleResolution": "Node16",
-    "removeComments": true,
     "stripInternal": true,
     "importHelpers": true,
     "alwaysStrict": true,
@@ -21,10 +20,8 @@
     "forceConsistentCasingInFileNames": true,
     "rootDir": "src",
     "outDir": "dist",
-    "lib": [
-      "ES2015"
-    ],
-    "baseUrl":""
+    "lib": ["ES2015"],
+    "baseUrl": ""
   },
   "include": ["src"]
 }
