--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oada/jobs",
-  "version": "4.2.1",
+  "version": "4.2.2",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -59,7 +59,7 @@
     "@oada/client": "^4.5.0",
     "@oada/list-lib": "^4.2.6",
     "@oada/oadaify": "^2.1.0",
-    "@oada/types": "^3.3.0",
+    "@oada/types": "^3.4.5",
     "@sindresorhus/is": "^5.3.0",
     "ava": "^5.1.1",
     "bluebird": "^3.7.2",
@@ -70,7 +70,9 @@
     "cron": "^2.2.0",
     "csvjson": "^5.1.0",
     "debug": "^4.3.4",
+    "eventemitter3": "^5.0.0",
     "json-pointer": "^0.6.2",
+    "jsonpath-plus": "^7.2.0",
     "ksuid": "^3.0.0",
     "minimist": "^1.2.7",
     "moment": "^2.29.4",
