--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oada/jobs",
-  "version": "4.2.5",
+  "version": "4.3.1",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -79,7 +79,8 @@
     "p-timeout": "^6.1.0",
     "serialize-error": "^11.0.0",
     "tiny-json-http": "^7.4.2",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.4.2",
