--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oada/jobs",
-  "version": "4.4.3",
+  "version": "4.4.4",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -76,6 +76,7 @@
     "ksuid": "^3.0.0",
     "minimist": "^1.2.7",
     "moment": "^2.29.4",
+    "p-queue": "^7.3.4",
     "p-timeout": "^6.1.0",
     "serialize-error": "^11.0.0",
     "tiny-json-http": "^7.4.2",
