--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,10 @@
     "importHelpers": true,
     "alwaysStrict": true,
     "strict": true,
-    "importsNotUsedAsValues": "remove",
+    "verbatimModuleSyntax": true,
+    "preserveConstEnums": true,
     "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
@@ -20,8 +21,7 @@
     "forceConsistentCasingInFileNames": true,
     "rootDir": "src",
     "outDir": "dist",
-    "lib": ["ES2015"],
-    "baseUrl": ""
+    "lib": ["ES2015"]
   },
   "include": ["src"]
 }
