--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "source": "src/index.ts",
   "main": "dist/index.js",
   "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
   "bin": {
     "oada-jobs": "./dist/cli.mjs"
   },
