--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oada/jobs",
-  "version": "4.5.2",
+  "version": "4.6.0",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -59,6 +59,7 @@
   "packageManager": "yarn@4.1.0",
   "dependencies": {
     "@ava/typescript": "^4.1.0",
+    "@oada/lib-prom": "^3.8.0",
     "@oada/list-lib": "^4.3.0",
     "@oada/oadaify": "^2.1.0",
     "@oada/types": "^3.5.3",
