--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "serialize-error": "^11.0.3",
     "tiny-json-http": "^7.5.1",
     "tslib": "^2.6.2",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   },
   "peerDependencies": {
     "@oada/client": "^4.5.5"
@@ -96,6 +96,7 @@
     "@commitlint/config-conventional": "^18.6.0",
     "@oada/client": "^5.0.0",
     "@tsconfig/node16": "^16.1.1",
+    "@tsconfig/node20": "^20.1.4",
     "@types/chai": "^4.3.11",
     "@types/clone-deep": "^4.0.4",
     "@types/convict": "^6.1.6",
@@ -146,6 +147,7 @@
     "node": "20.11.0"
   },
   "resolutions": {
-    "xksuid": "https://github.com/g12i/xksuid.git#fix-crypto-polyfill"
+    "xksuid": "https://github.com/g12i/xksuid.git#fix-crypto-polyfill",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   }
 }
