--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oada/jobs",
-  "version": "4.7.1",
+  "version": "4.7.2",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -80,6 +80,7 @@
     "moment": "^2.30.1",
     "p-queue": "^8.0.1",
     "p-timeout": "^6.1.2",
+    "perf_hooks": "^0.0.1",
     "serialize-error": "^11.0.3",
     "tiny-json-http": "^7.5.1",
     "tslib": "^2.7.0",
