--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "@oada/jobs",
-  "version": "4.7.5",
+  "version": "5.0.0",
   "description": "A library for oada job based microservices",
   "source": "src/index.ts",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "module": "./src/index.ts",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "module": "./src/index.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
-  "bin": {
-    "oada-jobs": "./dist/cli.mjs"
-  },
-  "types": "dist/index.d.js",
   "files": [
     "src/**",
     "dist/**"
@@ -56,34 +64,29 @@
       ".test"
     ]
   },
-  "packageManager": "yarn@4.5.0",
+  "packageManager": "yarn@4.10.3",
   "dependencies": {
-    "@ava/typescript": "^5.0.0",
     "@oada/lib-prom": "^4.0.1",
     "@oada/list-lib": "^6.1.0",
     "@oada/oadaify": "^2.1.0",
     "@oada/pino-debug": "^4.0.1",
-    "@oada/types": "^4.0.0",
-    "@sindresorhus/is": "^6.3.1",
-    "ava": "^6.1.3",
-    "c8": "^10.1.2",
-    "chalk": "^5.3.0",
-    "clone-deep": "^4.0.1",
-    "cron": "^3.1.7",
+    "@oada/types": "3.5.3",
+    "@sindresorhus/is": "^7.1.0",
+    "cron": "^4.3.3",
     "csvjson": "^5.1.0",
-    "debug": "^4.3.7",
+    "dayjs": "^1.11.18",
+    "debug": "^4.4.3",
     "eventemitter3": "^5.0.1",
     "json-pointer": "^0.6.2",
-    "jsonpath-plus": "^8.1.0",
-    "ksuid": "^3.0.0",
-    "minimist": "^1.2.8",
+    "jsonpath-plus": "^10.3.0",
     "moment": "^2.30.1",
-    "p-queue": "^8.0.1",
-    "p-timeout": "^6.1.2",
+    "p-queue": "^9.0.0",
+    "p-timeout": "^7.0.0",
     "perf_hooks": "^0.0.1",
-    "serialize-error": "^11.0.3",
+    "serialize-error": "^12.0.0",
     "tiny-json-http": "^7.5.1",
-    "tslib": "^2.7.0",
+    "tslib": "^2.8.1",
+    "xksuid": "https://github.com/aultac/xksuid.git#commit=22a21eb01331191feb62ea0a4e67d96d2e80f396",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   },
   "peerDependencies": {
@@ -95,54 +98,27 @@
     }
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^18.6.3",
+    "@ava/typescript": "^6.0.0",
+    "@biomejs/biome": "^2.2.5",
+    "@commitlint/config-conventional": "^20.0.0",
     "@oada/client": "^5.3.0",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/chai": "^4.3.19",
-    "@types/clone-deep": "^4.0.4",
+    "@tsconfig/node20": "^20.1.6",
+    "@types/chai": "^5.2.2",
     "@types/convict": "^6.1.6",
-    "@types/cron": "^2.4.0",
+    "@types/cron": "^2.4.3",
     "@types/debug": "^4.1.12",
     "@types/json-pointer": "^1.0.34",
-    "@types/minimist": "^1.2.5",
-    "@types/moment": "^2.13.0",
-    "@types/node": "^16.18.108",
+    "@types/node": "20.19.19",
     "@types/tiny-json-http": "^7.3.4",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@yarnpkg/pnpify": "^4.1.2",
-    "@yarnpkg/sdks": "^3.2.0",
-    "chai": "^5.1.1",
-    "commitlint": "^18.6.1",
+    "@yarnpkg/sdks": "^3.2.3",
+    "ava": "^6.4.1",
+    "c8": "^10.1.3",
+    "chai": "^6.2.0",
+    "commitlint": "^20.1.0",
     "convict": "^6.2.4",
-    "dotenv": "^16.4.5",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-xo": "^0.44.0",
-    "eslint-config-xo-typescript": "^2.1.1",
-    "eslint-plugin-array-func": "^5.0.2",
-    "eslint-plugin-ava": "^14.0.0",
-    "eslint-plugin-escompat": "^3.11.1",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-github": "^4.10.2",
-    "eslint-plugin-i18n-text": "^1.0.1",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-no-constructor-bind": "^2.0.4",
-    "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-no-secrets": "^0.8.9",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-notice": "^0.9.10",
-    "eslint-plugin-optimize-regex": "^1.2.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^6.6.0",
-    "eslint-plugin-regexp": "^2.6.0",
-    "eslint-plugin-security": "^2.1.1",
-    "eslint-plugin-sonarjs": "^0.24.0",
-    "eslint-plugin-unicorn": "^51.0.1",
-    "prettier": "^3.3.3",
+    "dotenv": "^17.2.3",
     "ts-node": "^10.9.2",
-    "typescript": "5.6.2"
+    "typescript": "5.9.3"
   },
   "volta": {
     "node": "20.11.0"
